[package]
name = "clevelandv3"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0" }
bevy_quinnet = "0.9.0"
bevy_rapier3d = "0.27.0"
bincode = "1.3.3"
borsh = "1.5.1"
borsh-derive = "1.5.1"
lockfree = "0.5.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
once_cell = "1.19.0"
rand = "0.8.5"
rodio = "0.19.0"
serde = "1.0.204"
uuid = { version = "1.10.0", features = ["v4"] }
